test/corpus/flow_control.txt
==================
Flow control if statement
==================
using Toybox.System;

public function test() {

  // This for loop should only print the values 5, 6, and 7.
  for (var i = 0; i < 10; i += 1) {
    if (i < 5) {
      continue;
    }
    System.println(i);
    if (7 == i) {
      break;
    }
  }
}

---

(source_file
 (using_statement
  (property_access
   object: (identifier)
   property: (identifier)))
 (function_definition
  (function_keyword)
  name: (identifier)
  (parameter_list)
  body: (block_statement
    (comment)
    (for_statement
     initializer: (variable_declaration
       name: (identifier)
       value: (number_literal))
     condition: (expression_statement
       (binary_expression
        left: (identifier)
        operator: (operator)
        right: (number_literal)))
     increment: (compound_assignment_expression
       left: (identifier)
       operator: (assignment_operator)
       right: (number_literal))
     body: (block_statement
       (if_statement
        condition: (binary_expression
          left: (identifier)
          operator: (operator)
          right: (number_literal))
        consequence: (block_statement
          (continue_statement)))
       (expression_statement
        (function_call
         function: (property_access
           object: (identifier)
           property: (identifier))
         (parameter_list
          (identifier))))
       (if_statement
        condition: (binary_expression
          left: (number_literal)
          operator: (operator)
          right: (identifier))
        consequence: (block_statement
          (break_statement))))))))
