test/corpus/loops.txt
==================
For loop
==================

public function test() {
  var myArray = [1, 2, 3, 4, 5];
  for (var i = 0; i < myArray.size(); i++) {
      // Do something until 'i' is greater than or equal to the array size
  }
}

---

(source_file
 (function_definition
  (object_keyword)
  name: (identifier)
  (parameter_list)
  body: (block_statement
    (variable_declaration
     name: (identifier)
     value: (array_expression
       (number_literal)
       (number_literal)
       (number_literal)
       (number_literal)
       (number_literal)))
    (for_statement
     initializer: (variable_declaration
       name: (identifier)
       value: (number_literal))
     condition: (binary_expression
       left: (identifier)
       operator: (operator)
       right: (function_call
         function: (property_access
           object: (identifier)
           property: (identifier))
         (parameter_list)))
     increment: (arithmetic_expression
       (identifier)
       (arithmetic_operator))
     body: (block_statement
       (comment))))))

==================
For loop multi-dimensional array
==================

public function test() {
  var array = new [10];

  for( var i = 0; i < 10; i += 1 ) {
      array[i] = new [20];
  }
}

---

(source_file
 (function_definition
  (object_keyword)
  name: (identifier)
  (parameter_list)
  body: (block_statement
    (variable_declaration
     name: (identifier)
     value: (new_expression
       (array_constructor
        size: (number_literal))))
    (for_statement
     initializer: (variable_declaration
       name: (identifier)
       value: (number_literal))
     condition: (binary_expression
       left: (identifier)
       operator: (operator)
       right: (number_literal))
     increment: (compound_assignment_expression
       left: (identifier)
       operator: (assignment_operator)
       right: (number_literal))
     body: (block_statement
       (variable_assignment
        name: (container_access
          name: (identifier)
          index: (identifier))
        value: (new_expression
          (array_constructor
           size: (number_literal)))))))))

==================
While loop
==================

public function test() {
  myCounter = 0;
  while (myCounter < 10) {
      myCounter++;
  }
}

---

(source_file
 (function_definition
  (object_keyword)
  name: (identifier)
  (parameter_list)
  body: (block_statement
     (assignment_expression
      left: (identifier)
      right: (number_literal))
    (while_statement
     condition: (binary_expression
       left: (identifier)
       operator: (operator)
       right: (number_literal))
     body: (block_statement
        (arithmetic_expression
         (identifier)
         (arithmetic_operator)))))))

==================
While loop (Do While)
==================

public function test() {
  var myCounter = 0;
  do {
      myCounter++;
  }
  while (myCounter < 10);
}

---

(source_file
 (function_definition
  (object_keyword)
  name: (identifier)
  (parameter_list)
  body: (block_statement
    (variable_declaration
     name: (identifier)
     value: (number_literal))
    (do_while_statement
     body: (block_statement
        (arithmetic_expression
         (identifier)
         (arithmetic_operator)))
     condition: (binary_expression
       left: (identifier)
       operator: (operator)
       right: (number_literal))))))
